@@ -1,0 +1,8 @@
+package com.lambkit.core.api.route;
+
+public class ApiRenderHtml extends ApiRenderText {
+
+	public ApiRenderHtml() {
+		super("text/html;charset=utf-8");
+	}
+}
